# shizen/swagger/swagger.yaml
@@ -114,6 +114,12 @@ components:
           type: number
           format: double
           example: 500
+        native:
+          type: string
+          example: Portugal
+        classifiable:
+          type: integer
+          example: 0
         more_info:
           type: string
           example: https://pt.wikipedia.org/wiki/Flor
